[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/TileTopia-HQ/itinera"
authors = ["TileTopia <tiletopia@proton.me>"]

[workspace.dependencies]
itinera-core = { path = "crates/itinera-core" }
itinera-graph = { path = "crates/itinera-graph" }
itinera-osm = { path = "crates/itinera-osm" }
itinera-server = { path = "crates/itinera-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
bincode = "1"
