[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/GeoLang/itinera"
authors = ["GeoLang <tiletopia@proton.me>"]
description = "Routing engine with Dijkstra, isochrones, and map matching"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }
itinera-core = { path = "crates/itinera-core" }
itinera-graph = { path = "crates/itinera-graph" }
itinera-match = { path = "crates/itinera-match" }
itinera-osm = { path = "crates/itinera-osm" }
itinera-server = { path = "crates/itinera-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
bincode = "1"
