[package]
name = "itinera-core"
description = "Core routing algorithms — Dijkstra, A*, contraction hierarchies, isochrones"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
itinera-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = "1"
