[package]
name = "itinera-graph"
description = "Graph data structure for road networks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1"
rstar = "0.12"

[dev-dependencies]
